--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -9,12 +9,12 @@
     <ion-card-content>
       <form (ngSubmit)="login()" [formGroup]="credentials">
         <ion-item>
-          <ion-label position="stacked">Your Email</ion-label>
+          <ion-label position="stacked">Seu email</ion-label>
           <ion-input type="email" inputmode="email" placeholder="Email" formControlName="email"></ion-input>
           <ion-note slot="error" *ngIf="(email.dirty || email.touched) && email.errors">Please insert your email</ion-note>
         </ion-item>
         <ion-item>
-          <ion-label position="stacked">Password</ion-label>
+          <ion-label position="stacked">Senha</ion-label>
           <ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
           <ion-note slot="error" *ngIf="(password.dirty || password.touched) && password.errors">Please insert your password</ion-note>
         </ion-item>
@@ -23,21 +23,21 @@
         <div class="ion-margin-top">
           <ion-button type="button" expand="block" color="primary" fill="outline" routerLink="register">
             <ion-icon name="person-outline" slot="start"></ion-icon>
-            Create Account
+            Criar conta
           </ion-button>
 
           <ion-button type="button" expand="block" color="secondary" (click)="forgotPw()">
             <ion-icon name="key-outline" slot="start"></ion-icon>
-            Forgot password?
+            Esqueceu a senha?
           </ion-button>
 
           <ion-button type="button" expand="block" color="tertiary" (click)="getMagicLink()">
             <ion-icon name="mail-outline" slot="start"></ion-icon>
-            Get a Magic Link
+            Entrar com link mágico
           </ion-button>
           <ion-button type="button" expand="block" color="warning" routerLink="groups">
             <ion-icon name="arrow-forward" slot="start"></ion-icon>
-            Start without account
+            Entrar sem conta
           </ion-button>
         </div>
       </form>
